I fixed the spacing with finer detail and also vertically and horizontally centered all the sections.  Next I will change the text sizes and changes the backgrounds.

--- a/style.css
+++ b/style.css
@@ -10,9 +10,7 @@ body {
 }
 
 .top-navbar-items{
-    position: fixed;
     width: 100vw;
-    z-index: 9999;
 }
 
 .top-navbar-item-list{
@@ -34,7 +32,7 @@ body {
 .header{
     background-image: url("../rocket-repair/images/space-bg.jpg");
     width: 100vw;
-    height: 80px;
+    height: 50px;
     background-size: cover;
 }
 
@@ -74,6 +72,15 @@ body {
     background-image: url("../rocket-repair/images/warehouse.jpg");
     width: 100vw;
     height: 670px;
+    position: relative;
+}
+
+.services-section{
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .services-title, .service-list{
@@ -113,7 +120,16 @@ body {
 #quotes-section{
     background-image: url("../rocket-repair/images/bigspace.jpg");
     width: 100vw;
-    height: 780px;
+    height: 675px;
+    position: relative;
+}
+
+#free-quotes{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #button2{
@@ -154,11 +170,16 @@ body {
     width: 100vw !important;
     height: 680px;
     background-size: cover;
+    position: relative;
 }
 
 .extras-section{
     display: flex;
     flex-direction: column;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .bbb{
@@ -170,7 +191,7 @@ body {
 
 .extras-button{
     color: var(--primary-color);
-    margin: 16px;
+    margin: 25px 0px 0px 37px;
     display: inline;
     font-family: Nova Flat, Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
